--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
+    <button class>Edit Notepad</button>
     <div class="container"></div>
     
 </body>
